src/core-crm/objects/ABS_Categorisation__c/ABS_Categorisation__c.object-meta.xml
<CustomObject>
    <description>Contains Australian Bureau of Statistics (ABS) classifications for assessing low socio-economic status and regional and/or remoteness of a location.</description>
    <label>ABS Categorisation</label>
    <nameField>
        <label>ABS Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABS Categorisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>