src/core-crm/objects/ABS_Categorisation__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>The last date the classification is effective for</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>