src/core-crm/objects/ABS_Categorisation__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>The start date the classification takes affect</description>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>