src/core-crm/objects/ABS_Categorisation__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator denoting if configuration is in effect</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>