src/core-crm/objects/ABS_Categorisation__c/fields/Low_SES_Upper_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Low_SES_Upper_Boundary__c</fullName>
    <description>Upper boundary value for the defined low socio-economic status percentile</description>
    <label>Low SES Upper Boundary</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>