src/core-crm/objects/ABS_Categorisation__c/fields/Remoteness_Inner_Regional__c.field-meta.xml
<CustomField>
    <fullName>Remoteness_Inner_Regional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the remoteness class is to be included in remote and regional definition</description>
    <label>Remoteness Inner Regional</label>
    <type>Checkbox</type>
</CustomField>