src/core-crm/objects/ABS_Categorisation__c/validationRules/Effective_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Start_Date_Validation</fullName>
    <active>true</active>
    <description>Select an effective start date less than or equal to the effective end date.</description>
    <errorConditionFormula>AND( 
 NOT( ISNULL( Effective_Start_Date__c ) ),
 OR( 
  ISNEW(), 
  ISCHANGED( Effective_Start_Date__c ) 
 ),
 Effective_Start_Date__c &gt; Effective_End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Effective_Start_Date__c</errorDisplayField>
    <errorMessage>Select an effective start date less than or equal to the effective end date.</errorMessage>
</ValidationRule>